--- a/gazebo_grasp_plugin/msgs/CMakeLists.txt
+++ b/gazebo_grasp_plugin/msgs/CMakeLists.txt
@@ -1,16 +1,20 @@
 find_package(Protobuf REQUIRED)
 
-set(PROTOBUF_IMPORT_DIRS)
-foreach(ITR ${GAZEBO_INCLUDE_DIRS})
-    if(ITR MATCHES ".*gazebo-[0-9.]+$")
-        set(PROTOBUF_IMPORT_DIRS "${ITR}/gazebo/msgs/proto")
-    endif()
-endforeach()
-
 set(msgs
  grasp_event.proto
- ${PROTOBUF_IMPORT_DIRS}/time.proto
 )
 PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${msgs})
 add_library(gazebo_grasp_msgs SHARED ${PROTO_SRCS})
 target_link_libraries(gazebo_grasp_msgs ${PROTOBUF_LIBRARY})
+
+## Mark executables and/or libraries for installation
+install(TARGETS gazebo_grasp_msgs
+   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} 
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  FILES_MATCHING PATTERN "*.pb.h"
+)
